Stable new version

--- a/web/static/pages/text-processing/html/page.html
+++ b/web/static/pages/text-processing/html/page.html
@@ -1,8 +1,6 @@
+{{ define "title" }}Обработка текста{{ end }}
+
 {{ define "content" }}
-<div class="header-group">
-    <img src="pages/img/logo.png" class="logo-image"/>
-    <h1>Реальное время / Обработка текста</h1>
-</div>
 <div class="work-group">
 <div class="input-text-group">
     <div class="input-text-area">
