--- a/web/static/pages/text-rewriting/html/page.html
+++ b/web/static/pages/text-rewriting/html/page.html
@@ -1,8 +1,6 @@
+{{ define "title" }}Рерайт текста{{ end }}
+
 {{ define "content" }}
-<div class="header-group">
-    <img src="pages/img/logo.png" class="logo-image"/>
-    <h1>Реальное время / Рерайт текста</h1>
-</div>
 <div class="work-group">
 <div class="input-text-group">
     <textarea class="output-area" id="inputArea" placeholder="Введите сюда текст"></textarea>
