--- a/web/static/pages/image-generation/css/style.html
+++ b/web/static/pages/image-generation/css/style.html
@@ -1,3 +1,3 @@
 {{define "htmlStyle"}}
-<link rel="stylesheet" href="styles/image-grid-style.css">
+<link rel="stylesheet" href="/web/static/styles/pages/image-generation/style.css">
 {{end}}
