--- a/web/static/pages/image-generation/html/page.html
+++ b/web/static/pages/image-generation/html/page.html
@@ -1,8 +1,6 @@
+{{ define "title" }}Генерация изображений{{ end }}
+
 {{ define "content" }}
-<div class="header-group">
-  <img src="pages/img/logo.png" class="logo-image"/>
-  <h1>Реальное время / Генерация изображений</h1>
-</div>
 <div class="work-group">
     <div class="input-group">
         <div class="promt-area">
@@ -25,7 +23,7 @@
             </div>
             <div class="random-seed">
             <input type="checkbox" name="random-seed" class="checkbox" id="randomSeed" value="norm" checked>
-            <label for="normResult"><abbr title="Seed (зерно изображения) — параметр, который отвечает за базовую генерацию изображения. Одинаковые запрос и seed ведут к генерации одного и того же изображения">Случайный seed</abbr></label>
+            <label for="randomSeed"><abbr title="Seed (зерно изображения) — параметр, который отвечает за базовую генерацию изображения. Одинаковые запрос и seed ведут к генерации одного и того же изображения">Случайный seed</abbr></label>
             </div>
         </div>
     </div>
@@ -37,7 +35,7 @@
     </div>
     <div class="output-image-group">
         <div class="output-image-class">
-        <img class="output-image" id="outputImage" src="pages/img/templates/3-2.png" alt="Генерируемое изображение">
+        <img class="output-image" id="outputImage" src="/web/static/img/templates/3-2.png" alt="Генерируемое изображение">
         </div>
         <div class="seed-class">
         <p>Seed (зерно):</p>
