--- a/web/static/pages/recognition-from-file/html/page.html
+++ b/web/static/pages/recognition-from-file/html/page.html
@@ -1,8 +1,6 @@
+{{ define "title" }}Расшифровка аудио{{ end }}
+
 {{ define "content" }}
-<div class="header-group">
-  <img src="pages/img/logo.png" class="logo-image"/>
-  <h1>Реальное время / Расшифровка аудио</h1>
-</div>
 <div class="file-group">
   <input type="file" class="input-field" name="filePath" id="fileInput" accept="audio/*,video/*,.flv,.mkv">
 </div>
