--- a/web/static/pages/image-upscaler/html/page.html
+++ b/web/static/pages/image-upscaler/html/page.html
@@ -6,7 +6,7 @@
         <input type="file" class="input-field" name="filePath" id="fileInput" accept=".jpeg, .jpg, .png">
     </div>
     <div class=control-group>
-        <button class="button" id="upsclaeButton">Увеличить</button>
+        <button class="button" id="upscaleButton">Увеличить</button>
     </div>
     <div class="output-group">
         <img id="image">
