--- a/web/static/pages/text-processing/html/page.html
+++ b/web/static/pages/text-processing/html/page.html
@@ -7,7 +7,19 @@
         <textarea class="output-area" id="inputArea" placeholder="Введите сюда текст"></textarea>
     </div>
     <div class="input-text-area">
+        <div class="area">
         <textarea class="output-area" id="promtArea" placeholder="Введите сюда задачу для нейросети: ЧТО НУЖНО СДЕЛАТЬ С ЭТИМ ТЕКСТОМ"></textarea>
+        </div>
+        <div class="template">
+        <p>Выбрать готовый шаблон:</p>
+        <select id="promtSelect">
+            <option value="0">Выбрать шаблон</option>
+            <option value="rewrite">Рерайт</option>
+            <option value="title">Придумать заголовок</option>
+            <option value="short">Сократить</option>
+            <option value="result">Сформировать дайджест</option>
+        </select>
+        </div>
     </div>
 </div>
 <div class="rewrite-button-group">
