update 3.3.0: image upscale

--- a/web/static/pages/recognition-from-file/html/page.html
+++ b/web/static/pages/recognition-from-file/html/page.html
@@ -3,7 +3,7 @@
 {{ define "content" }}
 <div class="work-group">
 <div class="file-group">
-  <input type="file" class="input-field" name="filePath" id="fileInput" accept="audio/*,video/*,.flv,.mkv">
+  <input type="file" class="input-field" name="filePath" id="fileInput" accept="audio/*,video/*, .flv, .mkv, .aac">
 </div>
 <div class="language-group">
   <p class="help-text">Выберите язык для расшифровки</p>
