--- a/web/static/pages/image-upscaler/html/page.html
+++ b/web/static/pages/image-upscaler/html/page.html
@@ -9,7 +9,7 @@
         <button class="button" id="upscaleButton">Увеличить</button>
     </div>
     <div class="output-group">
-        <img id="image">
+        <img id="image" src="/web/static/img/templates/3-2.png">
     </div>
 </div>
 {{ end }}
