update 3.3.0 new templates

--- a/web/static/pages/text-processing/html/page.html
+++ b/web/static/pages/text-processing/html/page.html
@@ -15,8 +15,11 @@
         <select id="promtSelect">
             <option value="0">Выбрать шаблон</option>
             <option value="rewrite">Рерайт</option>
-            <option value="title">Придумать заголовок</option>
-            <option value="short">Сократить</option>
+            <option value="title">Создание заголовка</option>
+            <option value="short">Сокращение</option>
+            <option value="summary">Суммаризация</option>
+            <option value="analysis">Анализ</option>
+            <option value="normalize">Знаки препинания</option>
         </select>
         </div>
     </div>
