digest in page recognition templates

--- a/web/static/pages/text-processing/html/page.html
+++ b/web/static/pages/text-processing/html/page.html
@@ -14,8 +14,9 @@
         <p>Выбрать готовый шаблон:</p>
         <select id="promtSelect">
             <option value="0">Выбрать шаблон</option>
+            <option value="digest">Дайджест</option>
             <option value="rewrite">Рерайт</option>
-            <option value="title">Создание заголовка</option>
+            <option value="title">Заголовок</option>
             <option value="short">Сокращение</option>
             <option value="summary">Суммаризация</option>
             <option value="analysis">Анализ</option>
