update 3.3.1: recognize from URL and redesign

--- a/web/static/pages/recognition-from-file/html/page.html
+++ b/web/static/pages/recognition-from-file/html/page.html
@@ -4,6 +4,11 @@
 <div class="work-group">
 <div class="file-group">
   <input type="file" class="input-field" name="filePath" id="fileInput" accept="audio/*,video/*, .flv, .mkv, .aac">
+  <input type="url" class="input-field none-display" name="url" id="urlInput" placeholder="https://vk.com/video/@realnoevremya_official?z=video-85466065_456241777%2Fclub85466065">
+  <select id="fileTypeSelect">
+    <option value="file">Файл</option>
+    <option value="url">URL</option>
+  </select>
 </div>
 <div class="language-group">
   <p class="help-text">Выберите язык для расшифровки</p>
